--- a/css/styles.css
+++ b/css/styles.css
@@ -88,11 +88,23 @@ span {
 .content p {
     color: white;
     font-size: 22px;
+    line-height: 130%;
 }
 
 .info-label p {
     font-size: 16px;
-    line-height: 20px;
+    line-height: 130%;
+}
+
+.contact p {
+    font-size: 20px;
+    line-height: 130%;
+    color: white;
+    text-align: center;
+    padding-top: 5%;
+    width: 80%;
+    justify-content: center;
+    margin: auto;
 }
 
     /* ---------------------- */
@@ -1319,10 +1331,10 @@ span {
             }
             .flexslider.full li .image-caption {
                 position: absolute;
-                bottom: 10px;
+                bottom: 10%;
                 left: 50%;
                 padding: 10px 15px;
-                font-size: 13px;
+                font-size: 25px;
                 opacity: 1;
                 pointer-events: none;
                 -webkit-transform: translate(-50%, 0);
