--- a/css/styles.css
+++ b/css/styles.css
@@ -4622,10 +4622,12 @@ border-radius: 5px;
   z-index: 10;
   align-items: center;
   justify-content: center;
-  background-color: red;
+  background-color: white;
+  border-style: solid;
+  border-width: 1px;
   /* height: 50px; */
   position: relative;
-  color: white;
+  color: black;
   font-size: 20px;
   min-height: 40px;
   line-height: normal;
@@ -4636,7 +4638,7 @@ border-radius: 5px;
 }
 
 .update-banner a {
-    color: white;
+    color: black;
 }
 
 .price {
