--- a/css/styles.css
+++ b/css/styles.css
@@ -623,6 +623,7 @@ span {
                     }
             }
             .preloader {
+                display: none;
                 position: fixed;
                 height: 100%;
                 width: 100%;
