--- a/css/styles.css
+++ b/css/styles.css
@@ -232,7 +232,7 @@ background-size: cover;
     margin-top: 30px;
     /* margin-left: 5%;
     margin-right: 5%; */
-    font-size: 40px;
+    /* font-size: 40px; */
     /* font-size: calc(32px + 16); */
     text-transform: capitalize;
     line-height: 130%;
@@ -241,7 +241,7 @@ background-size: cover;
 
 @media screen and (min-width: 600px) {
     .courseheading {
-      font-size: 100px;
+      font-size: 70px;
       margin-top: 30px;
       line-height: normal;
       text-transform: uppercase;
@@ -260,7 +260,7 @@ background-size: cover;
 .subcourseheading {
     text-align: center;
     color: white;
-    font-size: 18px;
+    /* font-size: 18px; */
     /* font-size: clamp(30px, 16px); */
     /* display: none; */
 }
@@ -291,6 +291,12 @@ padding: 20px;
 } */
 
 /* ends */
+
+
+.what-will-you-learn {
+    color: white;
+    margin-top: 50px;
+}
 
 /* available at text */
 .available-button-container {
@@ -467,9 +473,12 @@ span {
         }
         ul {
             font-size: 0;
+
         }
         ul li {
             font-size: 18px;
+            /* display: none; */
+
         }
         h1, h2, h3, h4, h5, h6 {
             font-family: effra_bold, effra;
