--- a/css/styles.css
+++ b/css/styles.css
@@ -3795,6 +3795,12 @@ span {
                 header .logo {
                     z-index: 100;
                 }
+/* 
+                @media only screen and (max-width: 600px) {
+                    .logo {
+                        display: none;
+                    }
+                } */
 
             /* Navigation (Main Links) */
                 header > nav > ul {
