--- a/css/styles.css
+++ b/css/styles.css
@@ -235,20 +235,21 @@ background-size: cover;
 
 .courseheading {
     text-align: center;
-    margin-top: 30px;
+    /* margin-top: 30px; */
     /* margin-left: 5%;
     margin-right: 5%; */
     /* font-size: 40px; */
     /* font-size: calc(32px + 16); */
     text-transform: capitalize;
-    line-height: 130%;
+    /* line-height: 130%; */
+    line-height: normal;
     color: white;
 }
 
 @media screen and (min-width: 600px) {
     .courseheading {
       font-size: 70px;
-      margin-top: 30px;
+      /* margin-top: 30px; */
       line-height: normal;
       text-transform: uppercase;
     }
@@ -266,6 +267,8 @@ background-size: cover;
 .subcourseheading {
     text-align: center;
     color: white;
+    padding-bottom: 20px;
+    padding-top: 20px;
     /* font-size: 18px; */
     /* font-size: clamp(30px, 16px); */
     /* display: none; */
