--- a/css/styles.css
+++ b/css/styles.css
@@ -4674,6 +4674,7 @@ span {
     color: black;
 }
 
+
 .price {
     display: flex;
     flex-direction: row;
@@ -4735,6 +4736,18 @@ span {
 
     }
     
-    
-    
     /* end  */
+
+    .announce-2 {
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+        /* border: 1px white solid; */
+        padding: 20px;
+    }
+
+    .announce-2 p {
+        color: white;
+        text-align: center;
+    }
