--- a/css/styles.css
+++ b/css/styles.css
@@ -4765,3 +4765,12 @@ span {
     padding: 5px;
     border: none;
     }
+
+    .i-am-social {
+        display: flex;
+        justify-content: center;
+        font-size: 40px;
+        padding: 0px;
+        margin: 0px;
+    }
+
