--- a/css/styles.css
+++ b/css/styles.css
@@ -217,6 +217,20 @@ background-size: cover;
     color: white;
 }
 
+.availableheading-smaller {
+    text-align: center;
+    margin-top: 30px;
+    margin-left: 5%;
+    margin-right: 5%;
+    font-weight: 100;
+    letter-spacing: normal;
+    font-size: calc(8px + 1vw);
+        /* font-size: calc(18px + 16); */
+    text-transform: capitalize;
+    /* line-height: 130%; */
+    color: white;
+}
+
 .watchheading {
     text-align: center;
     margin-top: 30px;
