--- a/css/styles.css
+++ b/css/styles.css
@@ -438,6 +438,15 @@ span {
     margin: auto;
 }
 
+.about p {
+    font-size: 20px;
+    line-height: 130%;
+    color: white;
+    text-align: left;
+    padding-top: 10px;
+    width: 100%;
+}
+
 
     /* ---------------------- */
     /* Global                 */
