--- a/css/styles.css
+++ b/css/styles.css
@@ -4811,21 +4811,37 @@ span {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    padding-top: 20px;
-    padding-bottom: 20px;
+    padding-top: 10px;
+    padding-bottom: 10px;
     font-size: 18px;
     color: white;
     text-align: center;
-    border: 3px dotted white;
-    max-width: 800px;
+    /* border: 3px dotted white; */
+    background-color: white;
+    border-radius: 5px;
+    max-width: fit-content;
     margin: 0 auto;
     margin-top: 20px;
+    padding: 10px;
+}
+
+
+.shout-out a {
+    color: black;
+    line-height: normal;
+}
+
+.bold-text {
+    font-weight: bold;
 }
 
 @media screen and (max-width:768px) {
     .shout-out {
         margin-left: 20px;
         margin-right: 20px;
+        margin: 0 auto;
+        margin-top: 20px;
+        padding: 10px;
     }
 }
 
