--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,11 @@
 body {
     font-family: 'arial', sans-serif;
     overflow-x: hidden;
-    margin: 0;
+    margin: auto;
     padding: 0;
+    margin: 0;
+    width: 100%;
+
 }
 
 html {
@@ -39,9 +42,6 @@ footer {
     text-align: center;
 }
 
-.nav-list {
-    /* display: flex; */
-}
 
 
 ul {
@@ -88,7 +88,7 @@ h5 {
 
 p {
     margin: 0;
-    font-size: clamp(15px, 1px + 4vw, 30px);
+    font-size: clamp(15px, 1px + 4vw, 24px);
     color: black;
     /* font-weight: 100; */
 }
@@ -190,6 +190,20 @@ hr {
 
 .hamburger {
     display: none;
+}
+
+.nav, ul {
+    /* display: none; */
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    padding: 0;
+    margin: auto;
+    /* margin-bottom: 5px; */
+    justify-content: center;
+    align-items: center;
+    text-align: left;
+    
 }
 
 
