--- a/styles.css
+++ b/styles.css
@@ -1,15 +1,13 @@
 body {
     font-family: 'arial', sans-serif;
-    overflow-x: hidden;
-    margin: auto;
-    padding: 0;
     margin: 0;
-    width: 100%;
-
+    padding: 0;
+    overflow-x: hidden;
 }
 
 html {
     scroll-behavior: smooth;
+
 }
 
 .hero {
@@ -117,6 +115,14 @@ width: 100%;
     align-items: center;
 }
 
+.hero,
+section,
+.about-section,
+.video-section,
+.contact-section {
+    max-width: 100vw;
+}
+
 
 section {
     display: flex;
@@ -124,8 +130,10 @@ section {
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;
+    text-align: center;
     padding-left: 30px;
     padding-right: 30px;
+    /* max-width: 100vw; */
 }
 
 .about-section {
@@ -155,7 +163,8 @@ section {
 
 
 .video {
-    width: 80%;
+    max-width: 100%;
+    max-height: 80%;
 }
 
 
@@ -163,7 +172,7 @@ section {
     background:url(img/main.jpg);
     background-position: center;
     background-size: cover;
-    width: 100%;
+    /* width: 100%; */
     height: 100%;
 }
 
@@ -245,3 +254,6 @@ hr {
 padding-top: 100px;
 }
 
+@-ms-viewport{
+    width: device-width;
+  }
