--- a/styles.css
+++ b/styles.css
@@ -172,7 +172,7 @@ section {
     background:url(img/main.jpg);
     background-position: center;
     background-size: cover;
-    /* width: 100%; */
+    /* max-width: 100%; */
     height: 100%;
 }
 
@@ -216,7 +216,22 @@ hr {
 }
 
 
-@media only screen and (max-width: 1000px) {
+@media only screen and (max-width: 800px) {
+    /* Adjustments for smaller screens */
+    .project-container {
+        display: flex;
+        flex-wrap: wrap;
+    }
+
+    .hero,
+    section,
+    .about-section,
+    .video-section,
+    .contact-section,
+    footer {
+        max-width: 100%;
+    }
+
     .hamburger {
         display: block;
         border: 0;
@@ -229,7 +244,6 @@ hr {
 
     ul {
         display: none;
-        /* background-color: red; */
         margin: 0px;
     }
 
@@ -241,6 +255,7 @@ hr {
     .logo-text {
         display: none;
     }
+
     ul.show {
         display: block;
     }
@@ -248,7 +263,12 @@ hr {
     .headshot {
         display: none;
     }
+
+    #header-background {
+        /* display: none; */
+    }
 }
+
 
 .copyright {
 padding-top: 100px;
