--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,8 @@
 body {
-    font-family: 'arial', sans-serif;
-    margin: 0;
+    /* font-family: 'arial', sans-serif; */
+    font-family: 'Courier Prime', monospace; 
+    line-height: 1.5;
+        margin: 0;
     padding: 0;
     overflow-x: hidden;
 }
@@ -86,7 +88,7 @@ h5 {
 
 p {
     margin: 0;
-    font-size: clamp(15px, 1px + 4vw, 24px);
+    font-size: clamp(15px, 1px + 3vw, 20px);
     color: black;
     /* font-weight: 100; */
 }
