--- a/styles.css
+++ b/styles.css
@@ -117,12 +117,16 @@ width: 100%;
     align-items: center;
 }
 
-.hero,
+.hero {
+        max-width: 100vw;
+}
 section,
 .about-section,
 .video-section,
 .contact-section {
-    max-width: 100vw;
+    max-width: 800px; 
+    margin: 0 auto; 
+    padding: 0 20px; /
 }
 
 
@@ -135,6 +139,9 @@ section {
     text-align: center;
     padding-left: 30px;
     padding-right: 30px;
+    max-width: 800px; /* Set a maximum width for the container */
+    margin: 0 auto; /* Center the container horizontally */
+    padding: 0 20px; /
     /* max-width: 100vw; */
 }
 
