--- a/styles.css
+++ b/styles.css
@@ -388,3 +388,42 @@ padding-top: 100px;
     background-color: #0056b3;
   }
   
+
+
+  /* loader  */
+
+  .loader-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.7); /* Fully transparent black background */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 9999; /* ensure it's on top of other elements */
+}
+
+.loader-overlay p {
+    color: white;
+}
+
+.loader {
+    border: 8px solid black; /* Light grey */
+    border-top: 8px solid white; /* Blue */
+    border-radius: 50%;
+    width: 50px;
+    height: 50px;
+    animation: spin 1s linear infinite; /* Apply animation */
+}
+
+@keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+}
+
+/* Hide loader when content is loaded */
+body.loaded .loader-overlay {
+    display: none;
+}
