--- a/styles.css
+++ b/styles.css
@@ -242,6 +242,11 @@ hr {
     
 }
 
+.nav-list {
+    display: flex;
+    height: 50px;
+}
+
 
 @media only screen and (max-width: 800px) {
     /* Adjustments for smaller screens */
@@ -283,6 +288,7 @@ hr {
        display: flex;
        flex-direction: column-reverse;
     }
+
 
     .logo-text {
         display: none;
