--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,9 @@
 body {
     /* font-family: 'arial', sans-serif; */
-    font-family: 'Courier Prime', monospace; 
+    font-family: 'DM Sans', arial; 
     line-height: 1.5;
         margin: 0;
-    padding: 0;
+    /* padding: 0; */
     overflow-x: hidden;
 }
 
@@ -261,7 +261,7 @@ hr {
 
 .nav-list ul li a {
     font-size: 24px;
-    font-weight: normal;
+    font-weight: 300;
 }
 
 
@@ -336,6 +336,7 @@ padding-top: 100px;
   .social-icons {
     list-style: none;
     padding-top: 30vh;
+    width: 100%;
     margin: 0;
     gap: 3px;
 }
@@ -352,6 +353,7 @@ padding-top: 100px;
 .social-icons {
     display: flex;
     flex-direction: column;
+    width: 100%;
 }
 }
 
