--- a/styles.css
+++ b/styles.css
@@ -101,7 +101,7 @@ a {
 }
 
 strong {
-    font-weight: 600;
+    font-weight: 500;
     text-transform: uppercase;
 }
 
@@ -125,13 +125,15 @@ width: 100%;
 .hero {
         max-width: 100vw;
 }
+
+
 section,
 .about-section,
 .video-section,
 .contact-section {
     max-width: 800px; 
     margin: 0 auto; 
-    padding: 0 20px; /
+    padding: 0 20px; 
 }
 
 
@@ -144,16 +146,14 @@ section {
     text-align: center;
     padding-left: 30px;
     padding-right: 30px;
-    max-width: 800px; /* Set a maximum width for the container */
-    margin: 0 auto; /* Center the container horizontally */
+    max-width: 800px; 
+    margin: 0 auto;
     padding: 0 20px; /
-    /* max-width: 100vw; */
 }
 
 .about-section {
     display: flex;
     flex-direction: row;
-    /* height: 100vh; */
     height: auto;
     padding-left: 30px;
     padding-right: 30px;
@@ -164,18 +164,18 @@ section {
 
 
 .about-image {
-    /* display: none; */
-    max-width: 350px;
+    max-width: 250px;
     display: flex;
     flex-direction: column;
-    padding-top: 10vh;
-    padding-bottom: 10vh;
+    margin-top: -30px;
+    margin-bottom: 30px;
+    /* padding-top: 10vh; */
+    /* padding-bottom: 10vh; */
     border-radius: 50%;
 }
 
 .video-section {
     height: 100vh;
-
 }
 
 
@@ -440,3 +440,4 @@ padding-top: 100px;
     margin-bottom: 3vh;
     padding: 20px;
 }
+
