--- a/styles.css
+++ b/styles.css
@@ -259,6 +259,15 @@ hr {
     /* display: none; */
 }
 
+
+@media only screen and (max-width: 800px) {
+    /* Adjustments for smaller screens */
+
+    .nav-list {
+        display: none;
+    }
+}
+
 .nav-list ul li a {
     font-size: 24px;
     font-weight: 300;
