--- a/styles.css
+++ b/styles.css
@@ -127,51 +127,52 @@ width: 100%;
 }
 
 
-section,
-.about-section,
-.video-section,
-.contact-section {
+section {
     max-width: 800px; 
     margin: 0 auto; 
-    padding: 0 20px; 
+    /* padding: 0 20px;  */
 }
 
-
-section {
+.container {
+    min-height: 100vh;
+    /* width: 100%; */
     display: flex;
+    text-align: center;
     flex-direction: column;
-    flex-wrap: wrap;
-    justify-content: center;
     align-items: center;
-    text-align: center;
-    padding-left: 30px;
-    padding-right: 30px;
-    max-width: 800px; 
-    margin: 0 auto;
-    padding: 0 20px; /
+    padding-top: 10%;
+    padding-bottom: 10%;
+    /* padding-bottom: 10%; */
 }
 
-.about-section {
-    display: flex;
-    flex-direction: row;
-    height: auto;
-    padding-left: 30px;
-    padding-right: 30px;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
-}
+@media only screen and (max-width: 600px) {
+    .container {
+        min-height: 0;
+        margin-top: 20px;
+        /* border: solid 5px rgb(0, 0, 0); */
+        box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5);
+    }
 
+    .container p {
+        padding-left: 20px;
+        padding-right: 20px;
+        font-size: 18px;
+    }
+
+    .coming-soon {
+        margin-left: 20px;
+        margin-right: 20px;
+    }
+}
 
 .about-image {
     max-width: 250px;
     display: flex;
     flex-direction: column;
-    margin-top: -30px;
+    margin-top: -150px;
     margin-bottom: 30px;
-    /* padding-top: 10vh; */
-    /* padding-bottom: 10vh; */
     border-radius: 50%;
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5);
 }
 
 .video-section {
@@ -179,14 +180,6 @@ section {
 }
 
 
-.contact-section {
-    height: 100vh;
-    padding-left: 30px;
-    padding-right: 30px;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
-}
 
 
 .video {
@@ -201,6 +194,7 @@ section {
     background-size: cover;
     /* max-width: 100%; */
     height: 100%;
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5);
 }
 
 
@@ -268,6 +262,7 @@ hr {
     }
 }
 
+
 .nav-list ul li a {
     font-size: 24px;
     font-weight: 300;
@@ -279,6 +274,8 @@ hr {
 
     .about-image {
         max-width: 300px;
+        /* margin-top: -100px; */
+
     }
 
     .project-container {
@@ -286,13 +283,9 @@ hr {
         flex-wrap: wrap;
     }
 
-    .hero,
-    section,
-    .about-section,
-    .video-section,
-    .contact-section,
-    footer {
-        max-width: 100%;
+    section {
+        max-width: 80%;
+
     }
 
     .hamburger {
@@ -335,7 +328,7 @@ hr {
 
 
 .copyright {
-padding-top: 100px;
+margin-top: 5%;
 }
 
 @-ms-viewport{
@@ -344,7 +337,7 @@ padding-top: 100px;
 
   .social-icons {
     list-style: none;
-    padding-top: 30vh;
+    padding-top: 10%;
     width: 100%;
     margin: 0;
     gap: 3px;
@@ -363,6 +356,9 @@ padding-top: 100px;
     display: flex;
     flex-direction: column;
     width: 100%;
+}
+.social-icons img {
+    width: 80px;
 }
 }
 
