--- a/styles.css
+++ b/styles.css
@@ -162,6 +162,11 @@ section {
     /* padding: 0 20px;  */
 }
 
+.bio-ancher {
+    scroll-margin-top: 150px
+
+}
+
 .container {
     min-height: 100vh;
     /* width: 100%; */
